tenant-multiple-namespaces-svc/config/tenant1/ns1/ping-ns2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ping-ns2
  namespace: tenant1-ns1
spec:
  containers:
    - name: ping
      image:  docker.io/villardl/ping
