tenant-multiple-namespaces-svc/config/tenant1/ns1/allow-all-from-to-tenant-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-from-to-tenant-ns
  namespace: tenant1-ns1
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            knative.dev/tenant: tenant1
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            knative.dev/tenant: tenant1
  policyTypes:
    - Egress
    - Ingress
